--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Advanced git</h1>
-    <p>Im test branch</p>
+    <p>I created test branch, not Kairat</p>
+
   </body>
 </html>
