--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Advanced git</h1>
-    <p>Im test branch</p>
+    <p>Yes, Azhar created test branch. But she could shut up</p>
   </body>
 </html>
